--- a/admin/css/Style.css
+++ b/admin/css/Style.css
@@ -109,8 +109,9 @@
 }
 
 .myShapka{
-  margin: 0 10% 0 10%;
-  font-size:12pt;
+  margin: 0px 10% 5px 10%;
+  padding: 5px 0px 5px 0px;
+  font-size: 12pt;
   text-align: center;
   border-bottom: 1px solid black;
 }
