--- a/admin/css/Style.css
+++ b/admin/css/Style.css
@@ -139,3 +139,10 @@
 .JustRowDiv:hover{
   background-color:#efefef;
 }
+
+.formMarger{
+  margin: 7px 0px 7px 0px;
+  padding: 7px 0px 7px 0px;
+  background-color: #f5f5f5;
+  border-radius: 15px;
+}
