Uploading to Portfolio done
Updating and removing (images and items) in progress

--- a/admin/css/Style.css
+++ b/admin/css/Style.css
@@ -160,3 +160,9 @@
   background-color: white;
   border-radius: 15px;
 }
+
+.smallText{
+  font-size:8pt;
+  text-align: left;
+  word-wrap: break-word;
+}
