Only left is to add possible to write little description to site blocks

--- a/admin/css/Style.css
+++ b/admin/css/Style.css
@@ -166,3 +166,11 @@
   text-align: left;
   word-wrap: break-word;
 }
+
+.formMargerExist1:hover{
+  background-color: #f5f5f5;
+}
+
+.formMargerExist0:hover{
+  background-color: #f5f5f5;
+}
