--- a/main.css
+++ b/main.css
@@ -106,13 +106,8 @@ h2 {
 	HELLO
 */
 
-.hello {
-	background-image: url("img/01_helllo.png");
-}
-
 .hello .container {
 	padding: 100px 0 200px 0;
-	background-image: url("img/Iam.png?v=2");
 	background-repeat: no-repeat;
 	background-position: right bottom;
 	background-size: auto 90%;
@@ -152,9 +147,6 @@ h2 {
 /*
 	MY SKILLS
 */
-.my-skills {
-	background-image: url("img/02_skills.png");
-}
 
 .my-skills-description {
 	font-weight: 500;
@@ -191,8 +183,27 @@ h2 {
 }
 
 .my-services .card-img-overlay {
-	padding: 205px 20px 0 80px;
+	padding: 200px 20px 0 80px;
 }
+
+.card {
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100%;
+}
+
+.card .darker {
+	height: 100%;
+	background: transparent;
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.2)), color-stop(100%, rgba(0, 0, 0, 0.8)));
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.8) 100%);
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.8) 100%);
+	border-radius: .5rem;
+}
+
 
 .my-services .card-title {
 	color: rgb(255, 255, 255);
@@ -209,9 +220,6 @@ h2 {
 /*
 	LATEST WORKS
 */
-.latest-works {
-	background-image: url("img/03_portfolio.png");
-}
 
 .latest-works .row:nth-child(2) {
 	padding-top: 40px;
@@ -241,6 +249,11 @@ h2 {
 	margin-top: 35px;
 	padding: 30px 0 30px 0;
 	background-color: rgb(155,197,61);
+}
+
+.avatar {
+	height: 70px;
+	border-radius: 100%;
 }
 
 .reviews .reviews-text {
@@ -292,10 +305,6 @@ h2 {
 /*
 	CONTACT ME
 */
-.contact-me {
-	background-image: url("img/04_contact.png");
-}
-
 .contact-me h5 {
 	font-size: 1.25rem;
 	line-height: 1.5;
@@ -366,7 +375,7 @@ h2 {
 }
 
 .contact-me .fa-upwork {
-	background-image: url(img/upwork.svg);
+	background-image: url(admin/images/upwork.svg);
 }
 
 .contact-me label {
@@ -444,7 +453,7 @@ h2 {
 .fa-upwork {
 	width: 35.36px !important;
 	height: 41.5px !important;
-	background-image: url(img/upwork2.svg);
+	background-image: url(admin/images/upwork2.svg);
 	background-repeat: no-repeat;
 	background-position: left bottom;
 	background-size: 35.36px 41.5px;
@@ -489,19 +498,19 @@ h2 {
 }
 
 .page-arrow-next-gray {
-	background-image: url(img/arrow-next-gray.png);
+	background-image: url(admin/images/arrow-next-gray.png);
     background-repeat: no-repeat;
     background-position: center bottom;
 }
 
 .page-arrow-next-white {
-	background-image: url(img/arrow-next-white.png);
+	background-image: url(admin/images/arrow-next-white.png);
     background-repeat: no-repeat;
     background-position: center bottom;
 }
 
 .page-portfolio-top {
-	background-image: url(img/03_portfolio.png);
+	background-image: url(admin/images/03_portfolio.png);
     background-repeat: no-repeat;
     background-position: 20% bottom;
 }
@@ -702,7 +711,6 @@ h2 {
 
 @media (max-width: 992px) { /* применить стили если размер экрана меньше 992px */
 	.navbar-brand::after {
-		content: "BALAKALCHUK";
 		font-weight: 300;
 		color: rgb(80,80,80);
 	}
